# time-reminder

./: AGENTS.md  LICENSE  README.md  TODO.md  TS_MIGRATION_PLAN.md  package.json  rustfmt.toml  svelte.config.ts  tsconfig.json  vite.config.js  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  reminder.rs
src/lib/: ReminderEditor.svelte  SettingsPanel.svelte  i18n.js  i18n.ts  reminders.js  reminders.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/overlay/: +page.svelte
tests/integration/: i18nLocale.integration.test.js  i18nLocale.integration.test.ts  reminderCommands.integration.test.js  reminderCommands.integration.test.ts
tests/unit/: i18n.test.js  i18n.test.ts  reminders.test.js  reminders.test.ts
types/node/: index.d.ts
