[package]
name = "time-reminder"
version = "0.1.0"
description = "A periodic fullscreen reminder overlay app"
authors = ["you"]
edition = "2021"

[lib]
name = "time_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }
tauri-plugin-single-instance = "2"
